--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <p>Напишите нам и мы вам перезвоним!</p>
             </div>
         </div>
-        <form class="row" id="contact-form">
+        <form class="row" id="contact-form" action="mail.php" method="GET">
             <div class="col-lg-6">
                 <input type="text" placeholder="Имя" required name="name">
             </div>
